--- a/index.html
+++ b/index.html
@@ -13,7 +13,37 @@
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-[#edf2fe] flex items-center justify-center min-h-screen">
-	
+<body class="bg-[url(https://neluttu.github.io/retro-flash/wallpaper.jpg)] bg-top bg-no-repeat bg-cover flex items-center justify-center min-h-screen flex-col gap-10">
+	<div class="flex items-center justify-start w-full max-w-[640px] bg-white/20 backdrop-blur-sm overflow-hidden rounded-md gap-5 relative group shadow-[0px_8px_28px_15px_rgba(0,0,0,0.12)]">
+        <svg xmlns="http://www.w3.org/2000/svg" class="absolute -mt-10 group-hover:mt-0 transition-all duration-150 ease-in cursor-pointer top-3 right-3 hover:stroke-[#7c2f20]" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M18 6l-12 12" />
+            <path d="M6 6l12 12" />
+        </svg>
+        <div class="bg-gradient-to-br from-[#7c2f20] to-[#57261d] p-6 pr-8">
+            <svg xmlns="http://www.w3.org/2000/svg" class="" width="34" height="34" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M10 14l2 -2m2 -2l7 -7"></path>
+                <path d="M10.718 6.713l10.282 -3.713l-3.715 10.289m-1.063 2.941l-1.722 4.77a.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a.55 .55 0 0 1 0 -1l4.772 -1.723"></path>
+                <path d="M3 3l18 18"></path>
+             </svg>
+        </div>
+        <h2 class="text-xl text-white grow">Your message could not be sent</h2>
+    </div>
+    <div class="flex items-center justify-start w-full max-w-[640px] bg-white/20 backdrop-blur-sm overflow-hidden rounded-md gap-5 relative group shadow-[0px_8px_28px_15px_rgba(0,0,0,0.12)]">
+        <svg xmlns="http://www.w3.org/2000/svg" class="absolute -mt-10 group-hover:mt-0 transition-all duration-150 ease-in cursor-pointer top-3 right-3 hover:stroke-[#7c2f20]" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M18 6l-12 12" />
+            <path d="M6 6l12 12" />
+        </svg>
+        <div class="bg-gradient-to-br from-[#84e440] to-[#56922b] p-6 pr-8">
+            <svg xmlns="http://www.w3.org/2000/svg" class="" width="34" height="34" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M10 14l11 -11"></path>
+                <path d="M21 3l-6.5 18a.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a.55 .55 0 0 1 0 -1l18 -6.5"></path>
+            </svg>
+        </div>
+        <h2 class="text-xl text-white grow">Your message could not be sent</h2>
+    </div>
 </body>
 </html>
